--- a/index.html
+++ b/index.html
@@ -4,25 +4,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <script src="index.js" defer></script>
+  <link rel="stylesheet" href="./styles/style.css">
+  <script src="./js/index.js" type="module" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap" rel="stylesheet">
-  <title>PeliBuscalas busca</title>
+  <title>Pertulias</title>
 </head>
 
 <body class="claro">
   <header>
     <img src="./img/sol.png" alt="icono tema claro" class="iconoTema" id="temaClaro" width="32" height="32">
     <img src="./img/luna.png" alt="icono tema oscuro" class="iconoTema mostrar" id="temaOscuro" width="32" height="32">
-    <h1>PeliBuscalas </h1>
+    <h1>Pertulias</h1>
   </header>
-  <main>  
-    
+  <main>
+    <div id="movies">
+
+    </div>
+
   </main>
   <footer>
-    Emiliano Becerra :)
+    <div>
+      <p>
+        Emiliano Becerra :)
+      </p>
+    </div>
+    <div>
+      <span>thx</span>
+      <img src="./img/logo.svg" alt="logo the movie db api" width="60" style="margin: 0 5px;">
+      <span>for api</span>
+    </div>
+
   </footer>
 </body>
 
