--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div>
       <span>thx</span>
       <img src="./img/logo.svg" alt="logo the movie db api" width="60" style="margin: 0 5px;">
-      <span>for api</span>
+      <span>for the api</span>
     </div>
 
   </footer>
